# sphinx-substitution-extensions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .travis.yml  .yamlfmt  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  codecov.yaml  dev-requirements.txt  lint.mk  pyproject.toml  requirements.txt  resolved-requirements.txt  setup-requirements.txt  setup.cfg  setup.py  spelling_private_dict.txt  towncrier_template.rst.jinja  tox.ini  zizmor.yml
.github/: dependabot.yml
.github/workflows/: ci-versions.yml  ci.yml  dependabot-merge.yml  lint.yml  publish-to-pypi.yml  release.yml
admin/: custom_linters.py  release.py  release.sh
build-sample/: index.spelling
build-sample/.doctrees/: environment.pickle  five.doctree  four.doctree  index.doctree  markdown_sample.doctree  one.doctree  three.doctree  two.doctree
newsfragments/: +migrated-next-2.change.rst  +migrated-next.change.rst
requirements/: dev-requirements.txt  prompt-requirements.txt  requirements.txt  setup-requirements.txt
sample/source/: Talya.txt  __init__.py  conf.py  contents.rst  eleanor.txt  index.rst  markdown_sample.md  sample_include.txt
src/sphinx_substitution_extensions/: __init__.py  _version.py  extras.py  shared.py  utils.py
tests/: __init__.py  conftest.py  test_hypothesis.py  test_substitution_extensions.py  test_substitution_extensions_extras.py
