[check-manifest]
ignore =
          .coveragerc
          spelling_private_dict.txt
          LICENSE
          Makefile
          codecov.yaml
          dev-requirements.txt
          *-requirements.txt
          lint.mk
          requirements.txt
          admin
          admin/**
          pylintrc
          tests
          tests/**
          *.rst
          .git_archival.txt
          sample
          sample/**

[flake8]
ignore=L205,L101,L211,L303,L302,W503
exclude=./src/*/_vendor/,
        ./.eggs,

[tool:pytest]
log_cli=true
log_cli_level=INFO

[coverage:run]
branch = True
omit =
    *_vendor*

[coverage:report]
exclude_lines =
    pragma: no cover

[yapf]
DEDENT_CLOSING_BRACKETS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = 'normal'
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[isort]
multi_line_output=3
include_trailing_comma=true
skip=_vendor,
     .eggs,
     setup.py,

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
#   - D415
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# Section names do not need to end in newlines
#	- D406
# Section names do not need dashed underlines
# 	- D407
# No blank line is needed after the last section
ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D415

[doc8]
max-line-length = 2000
ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.txt,src/*/_vendor,.eggs/,src/*/_setuptools_scm_version.txt

[metadata]
name = Sphinx Substitution Extensions
description = Extensions for Sphinx which allow for substitutions.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sphinx, rst, documentation
license = Apache License, Version 2.0
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/sphinx-substitution-extensions
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
sphinx_substitution_extensions =
    py.typed
