[flake8]
ignore=L205,L101,L211,L303,L302,W503
exclude=./src/*/_vendor/,
        ./.eggs,

[metadata]
name = Sphinx Substitution Extensions
description = Extensions for Sphinx which allow for substitutions.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sphinx, rst, documentation
license = Apache License, Version 2.0
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/sphinx-substitution-extensions
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:
python_requires = >=3.11

[options.packages.find]
where=src

[options.package_data]
sphinx_substitution_extensions =
    py.typed
